@@ -1,3 +1,4 @@
 SVN
-* 2007-04-24: Made changes necessary to get normaddr service tests to pass
-
+* 2007-04-24:
+    * Made changes necessary to get normaddr service tests to pass
+    * Made changes necessary to get all but one geocode service tests to pass
